Fixed field buttons on iPhone +

--- a/css/style.less
+++ b/css/style.less
@@ -43,6 +43,10 @@
 	font-weight: 600;
 	color: white;
 	text-transform: uppercase;
+	@media(max-width: 480px) {
+		font-size: 8px;
+		padding: 5px 13px 2px 13px;
+	}
 }
 .title-style {
 	margin: 0 0 10px 0;
